1.28:
- fix segfault with empty device description (can happen for USB devices)

1.27.1:
- fix build

1.27:
- do not set firmware timeout to 1 second in probe-modules helper for
  Mandriva One (#39216)

1.26:
- load bus/firewire controllers (#31356)
- really ask dhcp domain if not guessed

1.25:
- do not allow to choose outdated cooker mirror list (#37278)

1.24:
- load disk/ide before disk/scsi (#38451, to prevent sata deps from
  overriding non-libata pata modules, like in stage2)
- fix asking modules when no controller is detected

1.23:
- probe usb-storage/sbp2 only when probing USB/SCSI buses
  (to make automatic boot faster on IDE)
- make dhcp the first choice (instead of static) in the network type menu
- clear tty2 after shell is killed
- log "killed shell" message on tty3
- add a space in front of top line (like help message)
- space-pad top line with spaces to the right (like help message)

1.22:
- fix automatic IDE media detection (was broken with multiple CD drives, #36161)
- fix bootsplash in automatic CD-Rom mode (as a result of IDE media detection fix) 
- wait only 1 second for firmware upload (not to hang boot with iwl3945, #37279)

1.21:
- load nls_cp437 and nls_iso8859_1 when loading vfat
  (used to be in custom modules.dep)

1.20:
- probe-modules:
  o handle the "--usb" option instead of "usb"
  o load module passed as argument (if any), instead of probing bus
- switch to modules from /lib/modules/`uname -r`, modules.dep containing full filename

1.19:
- rebuild with list_modules to handle atl2 ethernet driver

1.18:
- add probe-modules helper

1.17:
- use modules from disk/ide category (#33043)
- do not explicitely try to load ide-generic, ldetect will fallback to
  ide-generic when appropriate (#33043)

1.16:
- if you give nfs directory xxx, try to use xxx/ARCH
- handle cdroms with and without ARCH at the root

1.15:
- ask loading modules from /modules if needed
- read modules description from /modules/modules.description

1.14: