@@ -1,3 +1,5 @@
+- allow to pass module options to probe-modules
+
 1.28:
 - fix segfault with empty device description (can happen for USB devices)
 
